Docker file updated to build from latest version of alphine to fix all the open security issues of the docker image